--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://formbuilder.online/assets/js/form-builder.min.js"></script>
+    <script src="scripts/form-builder.js"></script>"
+<!-- 
+    <script src="https://formbuilder.online/assets/js/form-builder.min.js"></script> -->
     <script src="https://formbuilder.online/assets/js/form-render.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </head>
 <body>
     <div id="root"></div>
